--- a/TeNDA Inventory Management System.csproj
+++ b/TeNDA Inventory Management System.csproj
@@ -63,11 +63,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WelcomeScreen.cs">
+    <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WelcomeScreen.Designer.cs">
-      <DependentUpon>WelcomeScreen.cs</DependentUpon>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="ManageStock.cs">
       <SubType>Form</SubType>
@@ -89,8 +89,11 @@
       <DependentUpon>TeNDAInventoryDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="UsersDisplay\DataSource.cs" />
-    <EmbeddedResource Include="WelcomeScreen.resx">
-      <DependentUpon>WelcomeScreen.cs</DependentUpon>
+    <EmbeddedResource Include="ManageStock.resx">
+      <DependentUpon>ManageStock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ManageUsers.resx">
       <DependentUpon>ManageUsers.cs</DependentUpon>
